--- a/web/css/style.css
+++ b/web/css/style.css
@@ -9,6 +9,10 @@ p {
   line-height: 20px;
 }
 
+img {
+  display: block;
+}
+
 .btn {
   border: 3px solid #fec63c;
   padding: 10px 20px;
@@ -23,6 +27,11 @@ p {
 .btn:hover {
   color: white;
   border-color: white;
+}
+
+.btn-preto:hover {
+  color: #000;
+  border-color: #000;
 }
 
 .subtitulo {
@@ -51,6 +60,7 @@ p {
   width: 100%;
   background: #fec63c;
   padding: 15px 0;
+  z-index: 10;
 }
 
 .header_menu {
@@ -85,7 +95,7 @@ p {
   height: 380px;
   background: url("../img/bg.jpg") no-repeat center;
   background-size: cover;
-  margin-top: 96px;
+  margin-top: 92px;
   text-align: center;
   padding-top: 77px;
   color: #fff;
@@ -158,4 +168,162 @@ p {
 .produtos_icone {
   background: #000;
   padding: 20px;
+}
+
+.call {
+  text-align: center;
+  padding-top: 40px;
+  clear: both;
+}
+
+.call p {
+  margin-bottom: 20px;
+}
+
+/* portfolio */
+
+.portfolio {
+  width: 100%;
+  background: black;
+  padding: 40px 0;
+}
+
+.portfolio .subtitulo {
+  color: #fec63c;
+}
+
+.portfolio .subtitulo::after {
+  background: #fec63c;
+}
+
+.portfolio_lista li:last-child {
+  margin-top: 20px;
+}
+
+.portfolio .call p {
+  color: white;
+}
+
+/* qualidade */
+
+.qualidade {
+  padding: 60px 0;
+}
+
+.qualidade::after {
+  content: "";
+  width: 634px;
+  height: 83px;
+  display: block;
+  background: url(../img/linhas.svg) no-repeat center;
+  position: absolute;
+  top: 209px;
+  right: 162px;
+}
+
+.qualidade img {
+  margin: 0 auto;
+}
+
+.qualidade_lista li {
+  text-align: center;
+  padding: 0 40px;
+}
+
+.qualidade_lista li h3 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-top: 40px;
+}
+.qualidade_lista li h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #000;
+  margin: 6px auto;
+  z-index: -1;
+}
+
+/* quebra */
+
+.quebra {
+  width: 100%;
+  height: 220px;
+  background: url(../img/bg-footer.jpg) no-repeat center;
+  background-size: cover;
+  text-align: center;
+  color: white;
+}
+
+.quebra .quote-externo {
+  max-width: 400px;
+  padding-top: 40px;
+}
+
+/* footer */
+
+.footer {
+  width: 100%;
+  background: black;
+  color: white;
+  padding: 20px 0;
+}
+
+.footer h3 {
+  font-size: 18px;
+  line-height: 25px;
+  color: #fec63c;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+}
+
+.footer h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #fec63c;
+  margin: 6px 0 12px 0;
+}
+
+.footer_historia {
+  padding-right: 40px;
+}
+
+footer_contato ul li {
+  font-size: 14px;
+  line-height: 20px;
+  font-family: Georgia, "Times New Roman", serif;
+}
+
+.footer_redes ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer_redes ul li a {
+  border: 3px solid #fec63c;
+  display: block;
+  padding: 10px;
+}
+
+.footer_redes ul li a:hover {
+  border-color: #fff;
+}
+
+.copy {
+  width: 100%;
+  height: 60px;
+  background: #fec63c;
+  padding: 20px 0;
+}
+
+.copy p {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5;
 }
