--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,6 +11,7 @@ p {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .btn {
@@ -216,6 +217,10 @@ img {
 .produtos_icone {
   background: #000;
   padding: 20px;
+}
+
+.produtos_icone img {
+  margin: 0 auto;
 }
 
 .call {
