Finalizado a responsividade da página produtos

--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -21,7 +21,32 @@
     height: 26px;
     width: 26px;
   }
+
+  /* produtos  */
+
+  .produto_item h2 {
+    top: -150px;
+    margin-bottom: -56px;
+  }
+
+  .produto_icone {
+    background: black;
+    padding: 41px 0;
+  }
+
+  .produto_info p {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 20px 30px;
+    height: 122px;
+  }
+
+  .produto_info ul li {
+    width: 181px;
+    height: 49px;
+  }
 }
+
 /* estilo para smartphone */
 @media only screen and (max-width: 787px) {
   .header {
@@ -103,5 +128,36 @@
 
   .foto-equipe {
     padding-top: 40px;
+  }
+
+  /* produtos  */
+
+  .produto_item h2 {
+    top: -100px;
+    margin-bottom: -68px;
+  }
+
+  .produto_icone {
+    background: black;
+    padding: 41px 0;
+  }
+
+  .produto_info p {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 20px 30px;
+    height: auto;
+  }
+
+  .produto_info ul li {
+    width: 149bpx;
+    height: 49px;
+    font-size: 14px;
+    line-height: 20px;
+    padding-top: 14px;
+  }
+
+  .form {
+    padding-right: 0;
   }
 }
