--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -160,4 +160,11 @@
   .form {
     padding-right: 0;
   }
+
+  /* contato  */
+
+  .contato_form {
+    padding-right: 0px;
+    margin-bottom: 40px;
+  }
 }
