--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -150,7 +150,7 @@
   }
 
   .produto_info ul li {
-    width: 149bpx;
+    width: 149px;
     height: 49px;
     font-size: 14px;
     line-height: 20px;
